--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,8 @@
-OPENWEATHER_API_KEY=e18f11efa3e4bd1621304b1f04a0222e
-OPENCAGE_API_KEY=93067a67d7af4a2893128ed829e6feda
+OPENWEATHER_API_KEY=e18f***********************************
+OPENCAGE_API_KEY=93067*************************************
 DATABASE_URL=sqlite:///./weather.db
 ALLOWED_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
-YOUTUBE_API_KEY=AIzaSyC6tu5c5-jZJ8mgAepKfiJI_OoQOC5oMf4
+YOUTUBE_API_KEY=AIzaSy*************************************
 VITE_API_BASE=http://127.0.0.1:8000
 
 MAPS_PROVIDER=stadia
